--- a/index.html
+++ b/index.html
@@ -2,75 +2,18 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>Cadastro de Inventário</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #f4f6f8;
-      padding: 20px;
-    }
-    form {
-      background: #fff;
-      padding: 20px;
-      max-width: 400px;
-      margin: auto;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    }
-    input, button {
-      width: 100%;
-      padding: 8px;
-      margin-top: 10px;
-    }
-    button {
-      background: #2e7d32;
-      color: #fff;
-      border: none;
-      cursor: pointer;
-    }
-  </style>
+  <title>Login</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body class="login">
 
-<h2>📦 Cadastro de Inventário</h2>
+<div class="login-box">
+  <h2>🔐 Acesso ao Sistema</h2>
+  <input id="usuario" placeholder="Usuário">
+  <input id="senha" type="password" placeholder="Senha">
+  <button onclick="login()">Entrar</button>
+</div>
 
-<form id="inventarioForm">
-  <input type="text" placeholder="Código" id="codigo" required>
-  <input type="text" placeholder="Produto" id="produto" required>
-  <input type="text" placeholder="Categoria" id="categoria">
-  <input type="number" placeholder="Quantidade" id="quantidade" required>
-  <input type="text" placeholder="Local" id="local">
-  <input type="text" placeholder="Observação" id="observacao">
-  <button type="submit">Salvar</button>
-</form>
-
-<script>
-const url = "https://script.google.com/macros/s/AKfycbzLNj9P3V-ykE0wp_5lZFggra_51xmEOZIxererZB78f3dawLv3EP_tv_th-15sbYVHfA/exec";
-
-document.getElementById("inventarioForm").addEventListener("submit", function(e) {
-  e.preventDefault();
-
-  const dados = {
-    codigo: codigo.value,
-    produto: produto.value,
-    categoria: categoria.value,
-    quantidade: quantidade.value,
-    local: local.value,
-    observacao: observacao.value
-  };
-
-  fetch(url, {
-    method: "POST",
-    body: JSON.stringify(dados)
-  })
-  .then(res => res.json())
-  .then(() => {
-    alert("✅ Inventário salvo com sucesso!");
-    document.getElementById("inventarioForm").reset();
-  })
-  .catch(() => alert("❌ Erro ao salvar"));
-});
-</script>
-
+<script src="js/auth.js"></script>
 </body>
 </html>
