--- a/dashboard.html
+++ b/dashboard.html
@@ -264,7 +264,7 @@
 
   <script>
     // ✅ COLE AQUI SEU LINK CSV PUBLICADO
-    const SHEET_CSV_URL = "COLE_AQUI_SEU_LINK_CSV";
+    const SHEET_CSV_URL = "https://docs.google.com/spreadsheets/d/1pXlnyWfh8nGJpjgWNFNK5QRIarZoUIEuqsGN7dFxpkk/edit?usp=sharing";
 
     // dados em memória
     let products = [];
@@ -295,3 +295,4 @@
 
     function formatBRL(value) {
       return value.toLocaleString(
+
